# Tetris

./: CMakeLists.txt  Copyright_information.txt  Event.hpp  Field.hpp  Gamefunctions_Zei.c  Gamefunctions_Zei.h  Gameloop_Wei.c  Gameloop_Wei.h  Highscore.cpp  Highscore.hpp  LICENSE  Node.hpp  Notizen.txt  ProtectedInt.hpp  README.md  Spielfeld_loh.c  Spielfeld_loh.cpp  Spielfeld_loh.h  Spielfiguren.c  Spielfiguren.cpp  Spielfiguren.h  Spielfiguren.hpp  Tetris.c  Tetris.cpp  Tetris.hpp  Tetris.sln  Tetris_en_US.ts  Tetromino.cpp  Tetromino.hpp  github_tutorial.txt  highscoreausgabe.cpp  highscoreausgabe.h  highscoreausgabe.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  (+10 more)
Debug/: Tetris.ilk
Tetris/: Highscores.txt  Tetris.vcxproj  Tetris.vcxproj.filters
Tetris/Debug/: vc140.idb
Tetris/Debug/Tetris.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
